WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34592
[Qt] QScriptValue::toNumber() is broken
https://bugs.webkit.org/show_bug.cgi?id=34592
Summary
[Qt] QScriptValue::toNumber() is broken
Jędrzej Nowacki
Reported
2010-02-04 08:03:53 PST
Created
attachment 48144
[details]
use cases There are different use cases for which the toNumber() returns incorrect value. The use cases in the attachment.
Attachments
use cases
(980 bytes, text/plain)
2010-02-04 08:03 PST
,
Jędrzej Nowacki
no flags
Details
fix v1
(11.19 KB, patch)
2010-02-04 08:37 PST
,
Jędrzej Nowacki
no flags
Details
Formatted Diff
Diff
Fix v2
(11.18 KB, patch)
2010-02-09 02:48 PST
,
Jędrzej Nowacki
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jędrzej Nowacki
Comment 1
2010-02-04 08:37:43 PST
Created
attachment 48147
[details]
fix v1
WebKit Review Bot
Comment 2
2010-02-04 08:40:46 PST
Attachment 48147
[details]
did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 Ignoring "JavaScriptCore/qt/api/qscriptvalue_p.h": this file is exempt from the style guide. JavaScriptCore/qt/tests/qscriptvalue/tst_qscriptvalue.h:76: toNumber_data is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] JavaScriptCore/qt/tests/qscriptvalue/tst_qscriptvalue.h:124: toNumber_initData is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] JavaScriptCore/qt/tests/qscriptvalue/tst_qscriptvalue.h:125: toNumber_makeData is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] JavaScriptCore/qt/tests/qscriptvalue/tst_qscriptvalue.h:126: toNumber_test is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 4 If any of these errors are false positives, please file a bug against check-webkit-style.
Jędrzej Nowacki
Comment 3
2010-02-09 02:48:19 PST
Created
attachment 48397
[details]
Fix v2
WebKit Commit Bot
Comment 4
2010-02-09 18:36:45 PST
Comment on
attachment 48397
[details]
Fix v2 Clearing flags on attachment: 48397 Committed
r54579
: <
http://trac.webkit.org/changeset/54579
>
WebKit Commit Bot
Comment 5
2010-02-09 18:36:50 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug