2010-02-09  Jedrzej Nowacki  <jedrzej.nowacki@nokia.com>

Reviewed by Simon Hausmann.

        Fixes for QScriptValue::toNumber().

        Fix ECMA compliance in QScriptValue for values unbound
        to a QScriptEngine.

        [Qt] QScriptValue::toNumber() is broken
        https://bugs.webkit.org/show_bug.cgi?id=34592

        * qt/api/qscriptvalue_p.h:
        (QScriptValuePrivate::toNumber):
        * qt/tests/qscriptvalue/tst_qscriptvalue.h:
        * qt/tests/qscriptvalue/tst_qscriptvalue_generated.cpp:
        (tst_QScriptValue::toNumber_initData):
        (tst_QScriptValue::toNumber_makeData):
        (tst_QScriptValue::toNumber_test):

Canonical link: https://commits.webkit.org/45891@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54579 268f45cc-cd09-0410-ab3c-d52691b4dbfc